# home-assistant-celsiview

./: .gitignore  .gitlab-ci.yml  Pipfile  README.md  hacs.json  prompt.md  pyproject.toml
custom_components/celsiview/: __init__.py  api.py  bucketing.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  state_backfill.py  strings.json
custom_components/celsiview/translations/: en.json
scripts/: generate_brand.py
tests/: conftest.py  test_api.py  test_bucketing.py  test_state_backfill.py
