[project]
name = "home-assistant-celsiview"
version = "0.0.1"
requires-python = ">=3.13,<3.14"
dependencies = ["aiohttp"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    "ruff",
]

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["Celsiview-hjälp - Celsiview API.html", ".venv"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "RUF",      # ruff-specific
]
ignore = [
  "E501",     # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests
